@@ -1,11 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST sndio-0.0.8.tar.gz 156929 SHA256 5fea4ca261e2a09a8504fda047625ae38cb50f71432285c3605c44ed0d700fdf SHA512 35d011f47d93be19c97ffbb031d4611ad8c26bbb9ddb62073506aca991ab3424dcc0c96d9073e89e5455151f2ed7a001e56a7d1d2d9646c7c3e36e5f69e8da76 WHIRLPOOL 05ff5129acee8fab6c635a933ca33bf2a71d6cc3b3dd42a2243c491b81e211d9cc003cfb752148c217b822134a920d3329b3d98550717ae9ca1ea334a18b52be
 DIST sndio-0_p20120925.tar.bz2 108604 SHA256 09424042e53a29996615edb242ec264a024e418047c6901817e0a5a7e201f1c0 SHA512 b17bc5235efdb5d991170b81782bcbedcf300622a85bd4c691b4da0010756e3f4b54d8265b2a75f293777f3a9f318fe895d6054e7d31e3bff93573eab9e1e53f WHIRLPOOL 009e41c13caf2d2e2f8e761d9078bae52636774cb870126867c403b6ceb6fa59bb4aa792cb91874912d3f65652c138f8460c8c5b48502516a2ab00326dd7cd69
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlC+KnwACgkQknrdDGLu8JD38gD/WI9TSbUraP5oahB9is1iFNOM
-FAtJ6X2otMHsT1ZNtDkA/A4vk3Hdp7ACSPgflxGqikZYO8jOhdrxuRmLDJOBEaar
-=TSXJ
+iF4EAREIAAYFAlUSuL0ACgkQknrdDGLu8JDtUwD/SjKsuZN7usSXWUBICMy7kWQD
+B8KKxsrYZN2DFhUtyboA/jypMS9KWRrvO5deLTpGTpNT+C6iIq4TEvvdh+hYWOn9
+=1Cb7
 -----END PGP SIGNATURE-----
