@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/sndio
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*sndio-0.0.8 (25 Mar 2015)
+
+  25 Mar 2015; Michael Weber <xmw@gentoo.org> +sndio-0.0.8.ebuild,
+  sndio-9999.ebuild:
+  Version bump
 
 *sndio-0_p20120925-r1 (05 Dec 2012)
 
@@ -27,4 +33,3 @@
   +files/sndio-0_p20120925-username.patch, sndio-9999.ebuild,
   -files/sndio-9999-configure.patch:
   Initial import
-
